adicionando botões atalho

--- a/instrucoes.html
+++ b/instrucoes.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Kotta+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="inst.css">
+        <script src="voltar.js" defer></script>
         <title>Menu</title>
     </head>    
 <body>
@@ -22,7 +23,7 @@
         </div>
     </div>
     
-    <a href="menu.html" class="voltar">Voltar</a>
+    <a href="menu.html" class="voltar">Aperte (H) Voltar</a>
     
 </body>
 </html>
