--- a/menu.html
+++ b/menu.html
@@ -5,14 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Kotta+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="menu.css">
+        <script src="iniciar.js" defer></script>
         <title>Menu</title>
     </head>    
 <body>
     <img src="./assets/menugif.gif" alt="GIF animado do menu" class="menu-gif"> 
 
     <div class="menu-container">
-        <a href="index.html">Press Start</a>
-        <a href="instrucoes.html">Instruções</a>
+        <a href="index.html">Aperte Space para Iniciar </a>
+        <a href="instrucoes.html">Aperte (H) Instruções</a>
     </div>
 </body>
 </html>
