--- a/instrucoes.html
+++ b/instrucoes.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Kotta+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="inst.css">
         <script src="voltar.js" defer></script>
-        <title>Menu</title>
+        <title>Instruções</title>
     </head>    
 <body>
     <div class="instrucoes-container">
