--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <p>Score:</p>
       </div>
       <div class="status">
-        <p>Vidas:</p>
+        <p id="vida">Vidas:</p>
         <p>Bombas:</p>
       </div>
       <div class="logo">Logo do Jogo</div>
