--- a/index.html
+++ b/index.html
@@ -1,30 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Kotta+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <script src="shoot_class.js" defer></script>
-  <script src="shoot_main.js" defer></script>
-  <title>Jogo</title>
-</head>
+<html lang="pt-BR"> 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Kotta+One&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="menu.css">
+        <script src="iniciar.js" defer></script>
+        <title>Menu</title>
+    </head>    
 <body>
-  <div class="game">
-    <div class="game-area" id="game-canvas">
-      <canvas id="des" width="1050" height="700"></canvas>
+    <img src="./assets/menugif.gif" alt="GIF animado do menu" class="menu-gif"> 
+
+    <div class="menu-container">
+        <a href="index.html">Aperte Space para Iniciar </a>
+        <a href="instrucoes.html">Aperte (H) Instruções</a>
     </div>
-    <div class="hud">
-      <div class="score">
-        <p>H.Score:</p>
-        <p>Score:</p>
-      </div>
-      <div class="status">
-        <p id="vida">Vidas:</p>
-        <p>Bombas:</p>
-      </div>
-      <div class="logo">Logo do Jogo</div>
-    </div>
-  </div>
 </body>
 </html>
