--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="./assets/menugif.gif" alt="GIF animado do menu" class="menu-gif"> 
 
     <div class="menu-container">
-        <a href="index.html">Aperte Space para Iniciar </a>
+        <a href="jogo.html">Aperte Space para Iniciar </a>
         <a href="instrucoes.html">Aperte (H) Instruções</a>
     </div>
 </body>
