--- a/instrucoes.html
+++ b/instrucoes.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     
-    <a href="menu.html" class="voltar">Aperte (H) Voltar</a>
+    <a href="index.html" class="voltar">Aperte (H) Voltar</a>
     
 </body>
 </html>
