--- a/jogo.html
+++ b/jogo.html
@@ -16,8 +16,8 @@
     </div>
     <div class="hud">
       <div class="score">
-        <p>H.Score:</p>
-        <p>Score:</p>
+        <p id="hScore" >H.Score:</p>
+        <p id="score" >Score:</p>
       </div>
       <div class="status">
         <p id="vida">Vidas:</p>
