--- a/jogo.html
+++ b/jogo.html
@@ -21,7 +21,7 @@
       </div>
       <div class="status">
         <p id="vida">Vidas:</p>
-        <p>Bombas:</p>
+        <p id="bomba">Bombas:</p>
       </div>
       <div class="logo">Logo do Jogo</div>
     </div>
