--- a/jogo.html
+++ b/jogo.html
@@ -23,7 +23,7 @@
         <p id="vida">Vidas:</p>
         <p id="bomba">Bombas:</p>
       </div>
-      <div class="logo"><img src="./assets/logo.png" alt="" width="356px" height="3"56px"></div>
+      <div class="logo"><img src="./assets/logo.png" alt="" width="356px" height="356px"></div>
     </div>
   </div>
 </body>
